Fix: Tech stack images center aligned

--- a/css/style.css
+++ b/css/style.css
@@ -346,6 +346,7 @@ button.navbar-toggler {
 
 .custom-logo-width {
     width: 100px;
+    display: block;
 }
 
 /* blog style start */
